src/main/objects/RT_Demo_Platform_Event__e.object
<CustomObject>
    <description>Platform Event for demo purposes</description>
    <fields>
        <fullName>Creation_Sequence__c</fullName>
        <description>Sequence number generated during creation</description>
        <label>Creation Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <description>Descriptive information about the event</description>
        <label>Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <label>Payment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Topic__c</fullName>
        <description>The topic or subject to which an event pertains</description>
        <label>Topic</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <label>RT Demo Platform Event</label>
    <pluralLabel>RT Demo Platform Events</pluralLabel>
</CustomObject>